--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,15 @@
 # BlueJ files
 *.ctxt
 
+# IDEA files
+out/
+target/
+.idea/
+.idea_modules/
+*.iml
+*.ipr
+*.iws
+
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
