--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <java.version>11</java.version>
         <junit.version>5.2.0</junit.version>
         <logback.version>1.2.3</logback.version>
+        <mockito.version>3.1.0</mockito.version>
     </properties>
 
     <dependencyManagement>
@@ -102,6 +103,19 @@
                 <version>${junit.version}</version>
                 <scope>test</scope>
             </dependency>
+            <dependency>
+                <groupId>org.mockito</groupId>
+                <artifactId>mockito-core</artifactId>
+                <version>${mockito.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.mockito</groupId>
+                <artifactId>mockito-junit-jupiter</artifactId>
+                <version>${mockito.version}</version>
+                <scope>test</scope>
+            </dependency>
+
 
             <dependency>
                 <groupId>com.h2database</groupId>
