sql queries for Department were moved in dao.properties

--- a/department-management-dao/src/main/resources/dao.properties
+++ b/department-management-dao/src/main/resources/dao.properties
@@ -1,1 +1,5 @@
-department.select=SELECT d.departmentID, d.departmentName FROM department d ORDER BY d.departmentName
+department.selectAll=SELECT d.departmentID, d.departmentName FROM department d ORDER BY d.departmentName
+department.selectById=SELECT d.departmentID, d.departmentName FROM department d WHERE departmentId = :departmentId
+department.insert=INSERT INTO department(departmentName) VALUES (:departmentName)
+department.update=UPDATE department SET departmentName= :=departmentName WHERE departmentId = :departmentId
+department.delete=DELETE FROM department WHERE departmentId = : departmentId
