--- a/department-management-dao/src/main/resources/dao.properties
+++ b/department-management-dao/src/main/resources/dao.properties
@@ -1,5 +1,12 @@
-department.selectAll=SELECT d.departmentID, d.departmentName FROM department d ORDER BY d.departmentName
-department.selectById=SELECT d.departmentID, d.departmentName FROM department d WHERE departmentId = :departmentId
-department.insert=INSERT INTO department(departmentName) VALUES (:departmentName)
-department.update=UPDATE department SET departmentName= :=departmentName WHERE departmentId = :departmentId
-department.delete=DELETE FROM department WHERE departmentId = : departmentId
+department.findAll=SELECT d.department_id, d.department_name FROM department d ORDER BY d.departmentName
+department.findById=SELECT d.department_id, d.department_name FROM department d WHERE department_id = :departmentId
+department.create=INSERT INTO department(department_name) VALUES (:departmentName)
+department.update=UPDATE department SET department_name= :=departmentName WHERE department_id = :departmentId
+department.delete=DELETE FROM department WHERE department_id = : departmentId
+departmentDto.findAllWithAvgSalary=select d.department_id as departmentId,\
+ d.department_name as departmentName, \
+ avg(e.salary) as avgSalary \
+ from department d \
+ left join employee e on d.department_id = e.department_id \
+ group by d.department_id, d.department_name \
+ order by department_name
